// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a PaymentsForm component 1`] = `
<form
  className="root"
  onKeyDown={[Function]}
  onReset={[Function]}
  onSubmit={[Function]}
>
  <div
    className="body"
  >
    <h2
      className="heading"
    >
      Billing Information
    </h2>
    <div
      className="braintree"
    >
      <BraintreeDropin
        onError={[Function]}
        onReady={[Function]}
        onSuccess={[Function]}
        shouldRequestPaymentNonce={false}
      />
    </div>
    <div
      className="address_check"
    >
      <label
        className="root"
      >
        <input
          checked={true}
          className="input"
          id="00000000-0000-4000-8000-000000000000"
          name="addresses_same"
          onBlur={[Function]}
          onChange={[Function]}
          type="checkbox"
        />
        <span
          className="icon"
        >
          <svg
            fill="none"
            height={24}
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            viewBox="0 0 24 24"
            width={24}
            xmlns="http://www.w3.org/2000/svg"
          >
            <polyline
              points="9 11 12 14 22 4"
            />
            <path
              d="M21 12v7a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h11"
            />
          </svg>
        </span>
        <span
          className="label"
        >
          Billing address same as shipping address
        </span>
      </label>
      <p
        className="root"
      />
    </div>
  </div>
  <div
    className="footer"
  >
    <button
      className="root_highPriority"
      disabled={true}
      onClick={[Function]}
      onDragStart={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      type="submit"
    >
      <span
        className="content"
      >
        Use Card
      </span>
    </button>
    <button
      className="root_lowPriority"
      disabled={false}
      onClick={[Function]}
      onDragStart={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      type="button"
    >
      <span
        className="content"
      >
        Cancel
      </span>
    </button>
  </div>
</form>
`;

exports[`renders billing address fields if addresses_same checkbox unchecked 1`] = `
<form
  className="root"
  onKeyDown={[Function]}
  onReset={[Function]}
  onSubmit={[Function]}
>
  <div
    className="body"
  >
    <h2
      className="heading"
    >
      Billing Information
    </h2>
    <div
      className="braintree"
    >
      <BraintreeDropin
        onError={[Function]}
        onReady={[Function]}
        onSuccess={[Function]}
        shouldRequestPaymentNonce={false}
      />
    </div>
    <div
      className="address_check"
    >
      <label
        className="root"
      >
        <input
          checked={false}
          className="input"
          id="00000000-0000-4000-8000-000000000000"
          name="addresses_same"
          onBlur={[Function]}
          onChange={[Function]}
          type="checkbox"
        />
        <span
          className="icon"
        >
          <svg
            fill="none"
            height={24}
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            viewBox="0 0 24 24"
            width={24}
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              height="18"
              rx="2"
              ry="2"
              width="18"
              x="3"
              y="3"
            />
          </svg>
        </span>
        <span
          className="label"
        >
          Billing address same as shipping address
        </span>
      </label>
      <p
        className="root"
      />
    </div>
    <div
      className="firstname"
    >
      <div
        className="root"
      >
        <label
          className="label"
        >
          First Name
        </label>
        <span
          className="root"
          style={
            Object {
              "--iconsAfter": 0,
              "--iconsBefore": 0,
            }
          }
        >
          <span
            className="input"
          >
            <input
              className="input"
              id="firstname"
              name="firstname"
              onBlur={[Function]}
              onChange={[Function]}
              value=""
            />
          </span>
          <span
            className="before"
          />
          <span
            aria-hidden="false"
            className="after"
          />
        </span>
        <p
          className="root"
        />
      </div>
    </div>
    <div
      className="lastname"
    >
      <div
        className="root"
      >
        <label
          className="label"
        >
          Last Name
        </label>
        <span
          className="root"
          style={
            Object {
              "--iconsAfter": 0,
              "--iconsBefore": 0,
            }
          }
        >
          <span
            className="input"
          >
            <input
              className="input"
              id="lastname"
              name="lastname"
              onBlur={[Function]}
              onChange={[Function]}
              value=""
            />
          </span>
          <span
            className="before"
          />
          <span
            aria-hidden="false"
            className="after"
          />
        </span>
        <p
          className="root"
        />
      </div>
    </div>
    <div
      className="street0"
    >
      <div
        className="root"
      >
        <label
          className="label"
        >
          Street
        </label>
        <span
          className="root"
          style={
            Object {
              "--iconsAfter": 0,
              "--iconsBefore": 0,
            }
          }
        >
          <span
            className="input"
          >
            <input
              className="input"
              id="street0"
              name="street[0]"
              onBlur={[Function]}
              onChange={[Function]}
              value=""
            />
          </span>
          <span
            className="before"
          />
          <span
            aria-hidden="false"
            className="after"
          />
        </span>
        <p
          className="root"
        />
      </div>
    </div>
    <div
      className="city"
    >
      <div
        className="root"
      >
        <label
          className="label"
        >
          City
        </label>
        <span
          className="root"
          style={
            Object {
              "--iconsAfter": 0,
              "--iconsBefore": 0,
            }
          }
        >
          <span
            className="input"
          >
            <input
              className="input"
              id="city"
              name="city"
              onBlur={[Function]}
              onChange={[Function]}
              value=""
            />
          </span>
          <span
            className="before"
          />
          <span
            aria-hidden="false"
            className="after"
          />
        </span>
        <p
          className="root"
        />
      </div>
    </div>
    <div
      className="region_code"
    >
      <div
        className="root"
      >
        <label
          className="label"
        >
          State
        </label>
        <span
          className="root"
          style={
            Object {
              "--iconsAfter": 0,
              "--iconsBefore": 0,
            }
          }
        >
          <span
            className="input"
          >
            <input
              className="input"
              id="region_code"
              name="region_code"
              onBlur={[Function]}
              onChange={[Function]}
              value=""
            />
          </span>
          <span
            className="before"
          />
          <span
            aria-hidden="false"
            className="after"
          />
        </span>
        <p
          className="root"
        />
      </div>
    </div>
    <div
      className="postcode"
    >
      <div
        className="root"
      >
        <label
          className="label"
        >
          ZIP
        </label>
        <span
          className="root"
          style={
            Object {
              "--iconsAfter": 0,
              "--iconsBefore": 0,
            }
          }
        >
          <span
            className="input"
          >
            <input
              className="input"
              id="postcode"
              name="postcode"
              onBlur={[Function]}
              onChange={[Function]}
              value=""
            />
          </span>
          <span
            className="before"
          />
          <span
            aria-hidden="false"
            className="after"
          />
        </span>
        <p
          className="root"
        />
      </div>
    </div>
    <div
      className="telephone"
    >
      <div
        className="root"
      >
        <label
          className="label"
        >
          Phone
        </label>
        <span
          className="root"
          style={
            Object {
              "--iconsAfter": 0,
              "--iconsBefore": 0,
            }
          }
        >
          <span
            className="input"
          >
            <input
              className="input"
              id="telephone"
              name="telephone"
              onBlur={[Function]}
              onChange={[Function]}
              value=""
            />
          </span>
          <span
            className="before"
          />
          <span
            aria-hidden="false"
            className="after"
          />
        </span>
        <p
          className="root"
        />
      </div>
    </div>
    <span />
  </div>
  <div
    className="footer"
  >
    <button
      className="root_highPriority"
      disabled={true}
      onClick={[Function]}
      onDragStart={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      type="submit"
    >
      <span
        className="content"
      >
        Use Card
      </span>
    </button>
    <button
      className="root_lowPriority"
      disabled={false}
      onClick={[Function]}
      onDragStart={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      type="button"
    >
      <span
        className="content"
      >
        Cancel
      </span>
    </button>
  </div>
</form>
`;
